[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sequana-downsampling"
version = "0.10.0"
description = "Downsample NGS data sets (FastQ/FastA) using the Sequana framework"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/downsampling"
readme = "README.rst"
keywords = ["sequana", "snakemake", "NGS", "fastq", "downsampling"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    {include = "sequana_pipelines"}
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sequana = ">=0.17"
sequana-pipetools = ">=1.5.0"
click = ">=8.1.7"
rich-click = ">=1.7.2"
snakemake = ">=7.32"
pulp = ">=2.8"


[tool.poetry.scripts]
sequana_downsampling = "sequana_pipelines.downsampling.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
